--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.1.0"
+        "php": ">=7.1.0",
+        "czim/laravel-paperclip": "^2.7"
     },
     "autoload": {
         "psr-4": {
