--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-/vendor
-/node_modules
+.php_cs.cache
+.php_cs.tests.cache
+.phpunit.cache
 auth.json
-composer.phar
+build
 composer.lock
+composer.phar
+phpstan.neon
 phpunit.xml
+vendor
