--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": "^7.2.5 || ^8.0",
         "cakephp/chronos": "^2.0",
-        "czim/laravel-paperclip": "^3.0",
+        "czim/laravel-paperclip": "^3.0 || ^4.0",
         "illuminate/database": "^7.0 || ^8.2",
         "laravel/nova": "^3.0"
     },
