--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "cakephp/chronos": "^2.0",
         "czim/laravel-paperclip": "^3.0 || ^4.0",
         "illuminate/database": "^7.0 || ^8.2 || ^9.0",
-        "laravel/nova": "^3.0"
+        "laravel/nova": "^3.0 || ^4.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.18",
