--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": "^7.2.5 || ^8.0",
         "cakephp/chronos": "^2.0",
         "czim/laravel-paperclip": "^3.0 || ^4.0",
-        "illuminate/database": "^7.0 || ^8.2 || ^9.0",
+        "laravel/framework": "^8.74 || ^9.0",
         "laravel/nova": "^3.0 || ^4.0"
     },
     "require-dev": {
