--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,16 @@
         "php": "^7.2.5 || ^8.0",
         "cakephp/chronos": "^2.0",
         "czim/laravel-paperclip": "^3.0 || ^4.0 || ^5.0",
-        "laravel/framework": "^8.74 || ^9.0",
+        "laravel/framework": "^8.74 || ^9.0 || ^10.0",
         "laravel/nova": "^3.0 || ^4.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
         "nunomaduro/larastan": "^1.0 || ^2.0",
-        "orchestra/testbench": "^6.7 || ^7.0",
+        "orchestra/testbench": "^6.7 || ^7.0 || ^8.0",
         "phpstan/phpstan-mockery": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^9.5 || ^10.0",
         "thecodingmachine/phpstan-safe-rule": "^1.0"
     },
     "repositories": [
