--- a/composer.json
+++ b/composer.json
@@ -9,20 +9,20 @@
         "paperclip"
     ],
     "require": {
-        "php": "^7.2.5 || ^8.0",
-        "cakephp/chronos": "^2.0",
-        "czim/laravel-paperclip": "^3.0 || ^4.0 || ^5.0",
-        "laravel/framework": "^8.74 || ^9.0 || ^10.0",
-        "laravel/nova": "^3.0 || ^4.0"
+        "php": "^8.2",
+        "cakephp/chronos": "^3.1",
+        "czim/laravel-paperclip": "^5.0",
+        "laravel/framework": "^9.0 || ^10.0 || ^11.0",
+        "laravel/nova": "^4.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.0",
-        "nunomaduro/larastan": "^1.0 || ^2.0",
-        "orchestra/testbench": "^6.7 || ^7.0 || ^8.0",
-        "phpstan/phpstan-mockery": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5 || ^10.0",
-        "thecodingmachine/phpstan-safe-rule": "^1.0"
+        "friendsofphp/php-cs-fixer": "^3.64",
+        "larastan/larastan": "^2.9",
+        "orchestra/testbench": "^9.5",
+        "phpstan/phpstan-mockery": "^1.1",
+        "phpstan/phpstan-phpunit": "^1.4",
+        "phpunit/phpunit": "^11.4",
+        "thecodingmachine/phpstan-safe-rule": "^1.2"
     },
     "repositories": [
         {
